# cross-modal-etl

./: .gitignore  APPENDIX.md  README.md  demo.py  generate_embeddings.py  pyproject.toml  requirements.txt  search_cli.py
cross_modal/: __init__.py  api.py  embedding.py  evaluation.py  ingestion.py  retrieval.py  storage.py  vector_store.py
scripts/: download_audio.py  export_audio_wav.py  validate_embeddings.py
tests/: conftest.py  test_api.py  test_embedding.py  test_ingestion.py  test_retrieval.py  test_storage.py  test_vector_store.py
