[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-modal-etl"
version = "0.1.0"
description = "Cross-modal ETL pipeline for semantic audio-visual retrieval using CLIP and CLAP"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0",
    "faiss-cpu>=1.7.4",
    "librosa>=0.10.0",
    "Pillow>=9.5.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",

    "datasets>=2.12.0",
    "tqdm>=4.65.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "flask>=3.0.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["cross_modal*"]
